--- a/notebooks/Ch08-1-Lists.ipynb
+++ b/notebooks/Ch08-1-Lists.ipynb
@@ -1971,9 +1971,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class list in module builtins:\n",
+      "\n",
+      "class list(object)\n",
+      " |  list(iterable=(), /)\n",
+      " |\n",
+      " |  Built-in mutable sequence.\n",
+      " |\n",
+      " |  If no argument is given, the constructor creates a new empty list.\n",
+      " |  The argument must be an iterable if specified.\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |\n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return bool(key in self).\n",
+      " |\n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |\n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |\n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |\n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |\n",
+      " |  __getitem__(self, index, /)\n",
+      " |      Return self[index].\n",
+      " |\n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |\n",
+      " |  __iadd__(self, value, /)\n",
+      " |      Implement self+=value.\n",
+      " |\n",
+      " |  __imul__(self, value, /)\n",
+      " |      Implement self*=value.\n",
+      " |\n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |\n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |\n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |\n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |\n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |\n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |\n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |\n",
+      " |  __reversed__(self, /)\n",
+      " |      Return a reverse iterator over the list.\n",
+      " |\n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |\n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |\n",
+      " |  __sizeof__(self, /)\n",
+      " |      Return the size of the list in memory, in bytes.\n",
+      " |\n",
+      " |  append(self, object, /)\n",
+      " |      Append object to the end of the list.\n",
+      " |\n",
+      " |  clear(self, /)\n",
+      " |      Remove all items from list.\n",
+      " |\n",
+      " |  copy(self, /)\n",
+      " |      Return a shallow copy of the list.\n",
+      " |\n",
+      " |  count(self, value, /)\n",
+      " |      Return number of occurrences of value.\n",
+      " |\n",
+      " |  extend(self, iterable, /)\n",
+      " |      Extend list by appending elements from the iterable.\n",
+      " |\n",
+      " |  index(self, value, start=0, stop=9223372036854775807, /)\n",
+      " |      Return first index of value.\n",
+      " |\n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |\n",
+      " |  insert(self, index, object, /)\n",
+      " |      Insert object before index.\n",
+      " |\n",
+      " |  pop(self, index=-1, /)\n",
+      " |      Remove and return item at index (default last).\n",
+      " |\n",
+      " |      Raises IndexError if list is empty or index is out of range.\n",
+      " |\n",
+      " |  remove(self, value, /)\n",
+      " |      Remove first occurrence of value.\n",
+      " |\n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |\n",
+      " |  reverse(self, /)\n",
+      " |      Reverse *IN PLACE*.\n",
+      " |\n",
+      " |  sort(self, /, *, key=None, reverse=False)\n",
+      " |      Sort the list in ascending order and return None.\n",
+      " |\n",
+      " |      The sort is in-place (i.e. the list itself is modified) and stable (i.e. the\n",
+      " |      order of two equal elements is maintained).\n",
+      " |\n",
+      " |      If a key function is given, apply it once to each list item and sort them,\n",
+      " |      ascending or descending, according to their function values.\n",
+      " |\n",
+      " |      The reverse flag can be set to sort in descending order.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
+      " |\n",
+      " |  __class_getitem__(...)\n",
+      " |      See PEP 585\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |\n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |\n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(list)"
    ]
@@ -2388,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2400,9 +2549,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a number:  12\n",
+      "enter a number:  5\n",
+      "enter a number:  4\n",
+      "enter a number:  3\n",
+      "enter a number:  999\n"
+     ]
+    }
+   ],
    "source": [
     "alist = []\n",
     "getData(alist) # alist is actual parameter/argument"
@@ -2410,12 +2571,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12, 5, 4, 3, 999]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# when formal parameter is updated, actual parameter is also updated\n",
     "alist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getCodes(someList):# someList is formal parameter\n",
+    "    for i in range(5):\n",
+    "        a = input('enter a code: ')\n",
+    "        someList.append(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a code:  101_FBI\n",
+      "enter a code:  CIA_NOTFBI\n",
+      "enter a code:  2104\n",
+      "enter a code:  lhf\n",
+      "enter a code:  024vsdg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['101_FBI', 'CIA_NOTFBI', '2104', 'lhf', '024vsdg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "somelist = []\n",
+    "getCodes(somelist)\n",
+    "print(somelist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in somelist:\n",
+    "    if '101' in item:\n",
+    "        print(item.index('101') + 1 )"
    ]
   },
   {
@@ -2476,10 +2709,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'e', 'i', 'o', 'u', 'y']\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
+    "astring = 'aeiouy'\n",
+    "alist = list(astring)\n",
+    "print(alist)\n",
     "atuple = (1, 2, 3)\n",
     "alist = list(atuple)\n",
     "print(alist)"
