--- a/notebooks/Ch09-1-Dictionaries.ipynb
+++ b/notebooks/Ch09-1-Dictionaries.ipynb
@@ -441,9 +441,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class dict in module builtins:\n",
+      "\n",
+      "class dict(object)\n",
+      " |  dict() -> new empty dictionary\n",
+      " |  dict(mapping) -> new dictionary initialized from a mapping object's\n",
+      " |      (key, value) pairs\n",
+      " |  dict(iterable) -> new dictionary initialized as if via:\n",
+      " |      d = {}\n",
+      " |      for k, v in iterable:\n",
+      " |          d[k] = v\n",
+      " |  dict(**kwargs) -> new dictionary initialized with the name=value pairs\n",
+      " |      in the keyword argument list.  For example:  dict(one=1, two=2)\n",
+      " |\n",
+      " |  Built-in subclasses:\n",
+      " |      StgDict\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __contains__(self, key, /)\n",
+      " |      True if the dictionary has the specified key, else False.\n",
+      " |\n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |\n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |\n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |\n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |\n",
+      " |  __getitem__(self, key, /)\n",
+      " |      Return self[key].\n",
+      " |\n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |\n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  __ior__(self, value, /)\n",
+      " |      Return self|=value.\n",
+      " |\n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |\n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |\n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |\n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |\n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |\n",
+      " |  __or__(self, value, /)\n",
+      " |      Return self|value.\n",
+      " |\n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |\n",
+      " |  __reversed__(self, /)\n",
+      " |      Return a reverse iterator over the dict keys.\n",
+      " |\n",
+      " |  __ror__(self, value, /)\n",
+      " |      Return value|self.\n",
+      " |\n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |\n",
+      " |  __sizeof__(...)\n",
+      " |      D.__sizeof__() -> size of D in memory, in bytes\n",
+      " |\n",
+      " |  clear(...)\n",
+      " |      D.clear() -> None.  Remove all items from D.\n",
+      " |\n",
+      " |  copy(...)\n",
+      " |      D.copy() -> a shallow copy of D\n",
+      " |\n",
+      " |  get(self, key, default=None, /)\n",
+      " |      Return the value for key if key is in the dictionary, else default.\n",
+      " |\n",
+      " |  items(...)\n",
+      " |      D.items() -> a set-like object providing a view on D's items\n",
+      " |\n",
+      " |  keys(...)\n",
+      " |      D.keys() -> a set-like object providing a view on D's keys\n",
+      " |\n",
+      " |  pop(...)\n",
+      " |      D.pop(k[,d]) -> v, remove specified key and return the corresponding value.\n",
+      " |\n",
+      " |      If the key is not found, return the default if given; otherwise,\n",
+      " |      raise a KeyError.\n",
+      " |\n",
+      " |  popitem(self, /)\n",
+      " |      Remove and return a (key, value) pair as a 2-tuple.\n",
+      " |\n",
+      " |      Pairs are returned in LIFO (last-in, first-out) order.\n",
+      " |      Raises KeyError if the dict is empty.\n",
+      " |\n",
+      " |  setdefault(self, key, default=None, /)\n",
+      " |      Insert key with a value of default if key is not in the dictionary.\n",
+      " |\n",
+      " |      Return the value for key if key is in the dictionary, else default.\n",
+      " |\n",
+      " |  update(...)\n",
+      " |      D.update([E, ]**F) -> None.  Update D from dict/iterable E and F.\n",
+      " |      If E is present and has a .keys() method, then does:  for k in E: D[k] = E[k]\n",
+      " |      If E is present and lacks a .keys() method, then does:  for k, v in E: D[k] = v\n",
+      " |      In either case, this is followed by: for k in F:  D[k] = F[k]\n",
+      " |\n",
+      " |  values(...)\n",
+      " |      D.values() -> an object providing a view on D's values\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
+      " |\n",
+      " |  __class_getitem__(...)\n",
+      " |      See PEP 585\n",
+      " |\n",
+      " |  fromkeys(iterable, value=None, /)\n",
+      " |      Create a new dictionary with keys from iterable and values set to value.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |\n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |\n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(dict)"
    ]
@@ -465,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -814,28 +960,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "digits={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
-      "digits1={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
-      "digits2={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
-      "digits3={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n"
+      "digits={1: 'one', 2: 'two', 3: ['Four', 'Three', 3]}\n",
+      "digits1={1: 'one', 2: 'two', 3: ['Four', 'Three', 3]}\n",
+      "digits2={1: 'one', 2: 'two', 3: ['Four', 'Three', 3]}\n",
+      "digits3={1: 'one', 2: 'two', 3: ['three', 'Three', 3]}\n"
      ]
     }
    ],
    "source": [
     "import copy\n",
-    "a = \"three\"\n",
-    "digits = {1: 'one', 2: 'two', 3: [a, 'Three', 'THREE']}\n",
+    "a_list = ['three', 'Three', 3]\n",
+    "digits = {1: 'one', 2: 'two', 3: a_list}\n",
     "digits1 = digits # creates an alias\n",
     "digits2 = digits.copy() # shallow copy\n",
     "digits3 = copy.deepcopy(digits) # deep copy\n",
-    "a = \"Four\"\n",
+    "a_list[0] = \"Four\"\n",
     "print(f\"{digits=}\")\n",
     "print(f\"{digits1=}\")\n",
     "print(f\"{digits2=}\")\n",
@@ -916,6 +1062,7 @@
     "def getHist(word):# = \"Mississippi\"\n",
     "    h = {}\n",
     "    for c in word:\n",
+    "        c = c.lower()\n",
     "        if c in h:\n",
     "            h[c] += 1\n",
     "        else:\n",
