--- a/notebooks/Ch14-OOP.ipynb
+++ b/notebooks/Ch14-OOP.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,37 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Point at 0x1ed8508bc10>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a.x = 0 # dynamically attach attriutes\n",
     "a.y = 0\n",
@@ -106,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,21 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Point' object has no attribute 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m b\u001b[38;5;241m.\u001b[39mx\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute 'x'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b.x"
    ]
@@ -144,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +136,8 @@
     "    \n",
     "    # destructor \n",
     "    def __del__(self):\n",
-    "        Point.count -= 1"
+    "        Point.count -= 1\n",
+    "        pass"
    ]
   },
   {
@@ -187,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +225,7 @@
       "p: x = 0 and y = 0\n",
       "Total point objects = 1\n",
       "p1: x = 10 and y = 100\n",
-      "Total point objects = 2\n"
+      "Total point objects = 1\n"
      ]
     }
    ],
@@ -272,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Point object at 0x7f94e48e3730> <__main__.Point object at 0x7f94e48e3820>\n"
+      "<__main__.Point object at 0x00000194EBBF7050> <__main__.Point object at 0x00000194EBBF5CD0>\n"
      ]
     }
    ],
@@ -310,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +295,14 @@
     "        self.x = xx\n",
     "        self.y = yy\n",
     "        Point.count += 1\n",
-    "        \n",
+    "\n",
+    "    def get_point(self):\n",
+    "        return (self.x, self.y)\n",
+    "\n",
+    "    def set_point(self, (xx, yy)):\n",
+    "        self.x = xx\n",
+    "        self.y = yy\n",
+    "    \n",
     "    def dist_from_origin(self):\n",
     "        import math\n",
     "        dist = math.sqrt(self.x**2+self.y**2)\n",
@@ -341,35 +318,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(2, 2)\n",
       "2.8284271247461903\n"
      ]
     }
    ],
    "source": [
     "p1 = Point(2, 2)\n",
+    "print(p1)\n",
     "print(p1.dist_from_origin())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's print p1 object\n",
     "print(p1)"
@@ -385,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -503,16 +474,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "p3.move(\"a\", 2)"
+    "p3.move(\"a\", 2)\n",
+    "print(p3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -536,13 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "\n",
       "True\n",
       "False\n"
      ]
@@ -552,6 +535,10 @@
     "import copy\n",
     "p2 = Point(3, 4)\n",
     "p3 = p2 # alias or deepcopy?\n",
+    "p3.move(1,1)\n",
+    "print(p2)\n",
+    "print(p3)\n",
+    "print()\n",
     "print(p2 is p3) # checks if two references refer to the same object\n",
     "p4 = copy.deepcopy(p2)\n",
     "print(p2 is p4)"
@@ -566,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,18 +565,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 100)\n",
-      "(100, 100)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = Point(10, 10)\n",
     "print_point(p)\n",
@@ -606,6 +584,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_point(dot):\n",
+    "    dot.x = 99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1)\n",
+      "(99, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p3)\n",
+    "move_point(p3)\n",
+    "print(p3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -615,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,18 +693,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "box:  ((0, 0), 100, 200)\n",
-      "bomb:  ((100, 80), 5, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "box = Rectangle(Point(0, 0), 100, 200)\n",
     "bomb = Rectangle(Point(100, 80), 5, 10)    # In my video game\n",
@@ -832,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,60 +861,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('instance method called', <__main__.MyClass at 0x7f94e4901820>)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c.method()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('class method called', __main__.MyClass)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "MyClass.classmethod()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'static method called'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "MyClass.staticmethod()"
    ]
